<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/fake_actionbar" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:padding="15dp"
                android:src="@drawable/ic_create"
                android:id="@+id/imageView" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawer_create"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/shade_text_dark_strong"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageView" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="15dp"
            android:id="@+id/relativeLayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:padding="15dp"
                android:src="@drawable/ic_browse"
                android:id="@+id/imageView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawer_browse"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/shade_text_dark_strong"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageView2" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="15dp"
            android:id="@+id/relativeLayout2" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:padding="15dp"
                android:src="@drawable/ic_find_friends"
                android:id="@+id/imageView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawer_friends"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/shade_text_dark_strong"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageView3" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="15dp"
            android:id="@+id/relativeLayout3" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:padding="15dp"
                android:src="@drawable/ic_tickets"
                android:id="@+id/imageView4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawer_tickets"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/shade_text_dark_strong"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageView4" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/shade_lime_65">

        </RelativeLayout>
</LinearLayout>